added media query for mobile

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div class="headerSection">
     <img src="arcade.png" id="logo" alt="Tetris logo"/>
     <h1 class="heading">Retro Tetris Game</h1>
+     <div id="fullSizeMessage">This game requires a keyboard to play, and a screen width larger than 480px. Please log in to your computer to play.</div>
     <div id="instructionsBox">
       <div class="instructions">Use the arrow keys to play</div>
       <div class="instructions">Up = Rotate, Down = drop the piece down, Left = move the piece left, Right = move the piece right.</div>
